# first_QT

./: CMakeLists.txt  README.md
